[gd_scene load_steps=21 format=3 uid="uid://b6urbbuhgc0x7"]

[ext_resource type="Script" uid="uid://bftyknoekpha1" path="res://levels/objects/sensor_spike/sensor_spike.gd" id="1_010a2"]
[ext_resource type="Script" uid="uid://ccpqtop0obu2w" path="res://Scripts/hit_area_2d.gd" id="2_k0fdc"]
[ext_resource type="Texture2D" uid="uid://b61bxu56bvwt3" path="res://assets/island/objects/sensor_spike/Spike_B.png" id="2_muqwb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x4oxu"]
atlas = ExtResource("2_muqwb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6cxs"]
atlas = ExtResource("2_muqwb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp3nt"]
atlas = ExtResource("2_muqwb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt7ay"]
atlas = ExtResource("2_muqwb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjnge"]
atlas = ExtResource("2_muqwb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3856e"]
atlas = ExtResource("2_muqwb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0nms"]
atlas = ExtResource("2_muqwb")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5mlr"]
atlas = ExtResource("2_muqwb")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vib8r"]
atlas = ExtResource("2_muqwb")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pddd0"]
atlas = ExtResource("2_muqwb")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lum0c"]
atlas = ExtResource("2_muqwb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muqwb"]
atlas = ExtResource("2_muqwb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8aip"]
atlas = ExtResource("2_muqwb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oydc"]
atlas = ExtResource("2_muqwb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_010a2"]
atlas = ExtResource("2_muqwb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s8aip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4oxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6cxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp3nt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt7ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjnge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3856e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0nms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5mlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vib8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pddd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lum0c")
}],
"loop": false,
"name": &"activate",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_muqwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8aip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oydc")
}],
"loop": false,
"name": &"deactivate",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_010a2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xexh"]
size = Vector2(28, 6.5)

[node name="Spike" type="Node2D"]
script = ExtResource("1_010a2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 13)
sprite_frames = SubResource("SpriteFrames_s8aip")
animation = &"activate"
autoplay = "idle"

[node name="HitArea2D" type="Area2D" parent="."]
position = Vector2(0, 11)
collision_mask = 4
script = ExtResource("2_k0fdc")
metadata/_custom_type_script = "uid://ccpqtop0obu2w"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
shape = SubResource("RectangleShape2D_0xexh")
disabled = true
debug_color = Color(0.976765, 0.0998552, 0.294739, 0.42)

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(0, 15.25)
shape = SubResource("RectangleShape2D_0xexh")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
